fix: fix overlap between button text and icon

--- a/static/css/components/buttonCta.less
+++ b/static/css/components/buttonCta.less
@@ -37,6 +37,13 @@ a.cta-btn {
     background-size: contain;
     background-position: center;
   }
+  .btn-icon.external-link-icon {
+    background-image: url(/static/images/icons/octicon-link-external-24.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin-left: auto;
+  }
 
   .btn-label { padding: 0 10px; }
 
